added interfaces, optional css classname prefixed, renamed JSONEditNode to better reflect its behaviour

--- a/examples/index.html
+++ b/examples/index.html
@@ -4,9 +4,16 @@
     <meta charset="utf-8">
     <title>JSON M Edit - Examples</title>
     <link rel="SHORTCUT ICON" href="../resources/media/images/jsonEdit16.ico">
+    <!-- include libs -->
     <script src="../libs/jQuery_v1.11.1.js"></script>
+
+    <!-- include interfaces -->
+    <script src="../src/interfaces/Interface.js"></script>
+    <script src="../src/interfaces/IEventHandler.js"></script>
+    <script src="../src/interfaces/IEditor.js"></script>
+
+    <!-- include code -->
     <script src="../src/EventHandler.js"></script>
-    <script src="../src/EditorInterface.js"></script>
     <script src="../src/JSONNumberEditor.js"></script>
     <script src="../src/JSONObjectEditor.js"></script>
     <script src="../src/JSONArrayEditor.js"></script>
