added editor interfaces, some tests and corrected editor behaviours for undefined inputs

--- a/examples/index.html
+++ b/examples/index.html
@@ -14,6 +14,7 @@
 
     <!-- include code -->
     <script src="../src/EventHandler.js"></script>
+    <script src="../src/JSONNullEditor.js"></script>
     <script src="../src/JSONNumberEditor.js"></script>
     <script src="../src/JSONObjectEditor.js"></script>
     <script src="../src/JSONArrayEditor.js"></script>
