added menu link to tests page at documentation & examples page

--- a/docu/index.html
+++ b/docu/index.html
@@ -24,7 +24,9 @@
           <h1>JSON M Edit <small> - Documentation</small></h1>
         </div>
         <div id="headNav">
-          <a href="../examples/index.html">Examples</a> | <a href="../docu/index.html">Documentation</a>
+          <a href="../examples/index.html">Examples</a> |
+          <a href="../docu/index.html">Documentation</a> |
+          <a href="../tests/index.html">Tests</a>
         </div>
       </div>
     </div>
