added editor providers

--- a/examples/index.html
+++ b/examples/index.html
@@ -11,15 +11,19 @@
     <script src="../src/interfaces/Interface.js"></script>
     <script src="../src/interfaces/IEventHandler.js"></script>
     <script src="../src/interfaces/IEditor.js"></script>
+    <script src="../src/interfaces/IEditorProvider.js"></script>
 
     <!-- include code -->
     <script src="../src/EventHandler.js"></script>
     <script src="../src/JSONNullEditor.js"></script>
     <script src="../src/JSONNumberEditor.js"></script>
+    <script src="../src/JSONBooleanEditor.js"></script>
     <script src="../src/JSONObjectEditor.js"></script>
     <script src="../src/JSONArrayEditor.js"></script>
     <script src="../src/SimpleStringEditor.js"></script>
     <script src="../src/jsonEditor.js"></script>
+    <script src="../src/DefaultJSONEditorProvider.js"></script>
+
     <script src="./js/index.js"></script>
     <link rel="stylesheet" type="text/css" href="../resources/css/jsonEditor.css">
     <link rel="stylesheet" type="text/css" href="../resources/css/htmlLayout.css">
