added list & listbox classes and interfaces

--- a/examples/index.html
+++ b/examples/index.html
@@ -13,8 +13,11 @@
     <script src="../src/interfaces/IEditor.js"></script>
     <script src="../src/interfaces/IEditorProvider.js"></script>
 
+    <script src="../src/interfaces/IList.js"></script>
+    <script src="../src/interfaces/ISelector.js"></script>
+
     <!-- include code -->
-    <script src="../src/EventHandler.js"></script>
+    <script src="../src/classes/EventHandler.js"></script>
     <script src="../src/JSONNullEditor.js"></script>
     <script src="../src/JSONNumberEditor.js"></script>
     <script src="../src/JSONBooleanEditor.js"></script>
@@ -23,6 +26,10 @@
     <script src="../src/SimpleStringEditor.js"></script>
     <script src="../src/jsonEditor.js"></script>
     <script src="../src/DefaultJSONEditorProvider.js"></script>
+
+    <script src="../src/classes/List.js"></script>
+    <script src="../src/ListBox.js"></script>
+
 
     <script src="./js/index.js"></script>
     <link rel="stylesheet" type="text/css" href="../resources/css/jsonEditor.css">
