--- a/tests/index.html
+++ b/tests/index.html
@@ -16,7 +16,7 @@
     <script src="../src/interfaces/IEditorProvider.js"></script>
 
     <!-- include code -->
-    <script src="../src/EventHandler.js"></script>
+    <script src="../src/classes/EventHandler.js"></script>
     <script src="../src/JSONNullEditor.js"></script>
     <script src="../src/JSONNumberEditor.js"></script>
     <script src="../src/JSONBooleanEditor.js"></script>
