added tests for IList

--- a/tests/index.html
+++ b/tests/index.html
@@ -12,11 +12,16 @@
     <!-- include interfaces -->
     <script src="../src/interfaces/Interface.js"></script>
     <script src="../src/interfaces/IEventHandler.js"></script>
+    <script src="../src/interfaces/ISelector.js"></script>
+    <script src="../src/interfaces/IList.js"></script>
     <script src="../src/interfaces/IEditor.js"></script>
     <script src="../src/interfaces/IEditorProvider.js"></script>
 
-    <!-- include code -->
+    <!-- include classes -->
     <script src="../src/classes/EventHandler.js"></script>
+    <script src="../src/classes/List.js"></script>
+
+    <!-- include code -->
     <script src="../src/JSONNullEditor.js"></script>
     <script src="../src/JSONNumberEditor.js"></script>
     <script src="../src/JSONBooleanEditor.js"></script>
@@ -27,6 +32,7 @@
     <script src="../src/DefaultJSONEditorProvider.js"></script>
 
     <script src="./js/index.js"></script>
+    <script src="./js/ListTest.js"></script>
     <link rel="stylesheet" type="text/css" href="../resources/css/jsonEditor.css">
     <link rel="stylesheet" type="text/css" href="../resources/css/htmlLayout.css">
   </head>
